# SNI

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  stale.yml  test.yml
sni/: __main__.py  allanime.py  anilist.py  cli.py  config.py  exceptions.py  logger.py  player.py  tui.py  ui.py  watch_history.py  wizard.py
sni/providers/: __init__.py  allanime.py  animepahe.py  base.py  cache.py  hianime.py  registry.py
sni/providers/extractors/: __init__.py  megacloud.py  vixcloud.py
sni/tui/: app.py  bridge.py
sni/tui/screens/: help.py  history.py  home.py  player.py
sni/tui/widgets/: ascii_art.py  info_box.py
tests/: test_allanime_captcha.py  test_cache.py  test_config.py  test_core.py  test_exceptions.py  test_providers.py
worker/: README.md  deno.json  proxy.deno.js  proxy.js
worker/api/: proxy.js
worker/src/: main.ts
