[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sni"
version = "1.0.0"
description = "Stream Ninja Interface - Anime CLI + TUI"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=8.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pycryptodome>=3.20.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
standard = ["chafa>=1.13.0", "python-magic>=0.4.27"]
download = ["yt-dlp>=2024.0.0", "aria2p>=0.12.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/maxxsundeep20/SNI"
Source = "https://github.com/maxxsundeep20/SNI"

[project.scripts]
sni = "sni.cli:app"
sni-d = "sni.cli:app"
sni_dub = "sni.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sni"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
