[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI package name. We use "sni-cli" instead of "sni" because PyPI rejected
# the bare "sni" name as too similar to existing projects (sni-auth, sni-bin,
# sni-sdk, snib, snic, snid, ...). The console-script entry point is still
# just `sni` (defined below in [project.scripts]), so users run `sni play`,
# `sni tui`, etc. — only `pip install sni-cli` differs from the bare name.
name = "sni-cli"
version = "1.2.9"
description = "Stream Ninja Interface — terminal-based anime streaming CLI + TUI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "sundeepyt2" },
]
keywords = [
    "anime",
    "streaming",
    "cli",
    "tui",
    "mpv",
    "allanime",
    "hianime",
    "ani-cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=8.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pycryptodome>=3.20.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
standard = ["chafa>=1.13.0", "python-magic>=0.4.27"]
download = ["yt-dlp>=2024.0.0", "aria2p>=0.12.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sundeepyt2/SNI"
Source = "https://github.com/sundeepyt2/SNI"
Documentation = "https://github.com/sundeepyt2/SNI#readme"
Issues = "https://github.com/sundeepyt2/SNI/issues"
Changelog = "https://github.com/sundeepyt2/SNI/releases"

[project.scripts]
sni = "sni.cli:app"
sni-d = "sni.cli:app"
sni_dub = "sni.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sni"]

[tool.hatch.build.targets.sdist]
include = [
    "sni",
    "tests",
    "install.sh",
    "install.ps1",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

